add Yandex SpeechKit integration and update model types

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,3 +36,7 @@ spring:
     assemblyai:
       api-key: ${ASSEMBLY_API_KEY}
       base-url: "https://api.assemblyai.com/v2"
+
+    yandex:
+      api-key: ${YANDEX_API_KEY}
+      base-url: https://stt.api.cloud.yandex.net/speech/v1/stt:recognize
