--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+    implementation 'ws.schild:jave-all-deps:3.5.0'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
 }
 
